log
Fri Mar 27 06:25:06 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
b052ce0
Fri Mar 27 06:25:12 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
f03ab4d
Fri Mar 27 06:43:59 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:20: error: ‘Lista’ undeclared (first use in this function); did you mean ‘lista’?
   38 |     List* lista = (Lista*)malloc(sizeof(List));
      |                    ^~~~~
      |                    lista
list.c:38:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:26: error: expected expression before ‘)’ token
   38 |     List* lista = (Lista*)malloc(sizeof(List));
      |                          ^
list.c:40:10: error: ‘List’ {aka ‘struct List’} has no member named ‘talla’
   40 |     lista->talla=0;
      |          ^~
f63915d
Fri Mar 27 06:46:14 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:20: error: ‘Lista’ undeclared (first use in this function); did you mean ‘lista’?
   38 |     List* lista = (Lista*)malloc(sizeof(List));
      |                    ^~~~~
      |                    lista
list.c:38:20: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:26: error: expected expression before ‘)’ token
   38 |     List* lista = (Lista*)malloc(sizeof(List));
      |                          ^
list.c:40:10: error: ‘List’ {aka ‘struct List’} has no member named ‘talla’
   40 |     lista->talla=0;
      |          ^~
ff026ae
Fri Mar 27 06:47:52 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushBack’:
list.c:76:25: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
   76 |     list->current = list->tail;
      |                         ^~
list.c: In function ‘popBack’:
list.c:91:25: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
   91 |     list->current = list->tail;
      |                         ^~
test.c: In function ‘initialize_exList’:
test.c:56:15: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
   56 |      L->head=L->tail=createNode(j);
      |               ^~
test.c:65:11: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
   65 |          L->tail->next=n;
      |           ^~
test.c:66:19: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
   66 |          n->prev=L->tail;
      |                   ^~
test.c:67:11: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
   67 |          L->tail=n;
      |           ^~
test.c: In function ‘initialize_emptyList’:
test.c:78:15: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
   78 |      L->head=L->tail=NULL;
      |               ^~
test.c: In function ‘test_create’:
test.c:89:28: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
   89 |     if(L->head != NULL || L->tail !=NULL || L->current!=NULL){
      |                            ^~
test.c: In function ‘test_first_next’:
test.c:149:19: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  149 |     L->current = L->tail;
      |                   ^~
test.c: In function ‘test_last_prev’:
test.c:188:23: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  188 |     if(L->current != L->tail){
      |                       ^~
test.c:205:23: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  205 |     if(L->current != L->tail->prev){
      |                       ^~
test.c: In function ‘test_pushfront’:
test.c:249:9: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  249 |     if(L->tail==NULL) {
      |         ^~
test.c:254:20: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  254 |     if(L->head != L->tail){
      |                    ^~
test.c: In function ‘test_pushcurrent’:
test.c:327:17: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  327 |     L->current=L->tail;
      |                 ^~
test.c:328:16: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  328 |     Node* aux=L->tail;
      |                ^~
test.c:335:9: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  335 |     if(L->tail == NULL || L->tail->data != j){
      |         ^~
test.c:335:28: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  335 |     if(L->tail == NULL || L->tail->data != j){
      |                            ^~
test.c:340:41: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  340 |     if(aux->next == NULL || aux->next!=L->tail){
      |                                         ^~
test.c:345:9: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  345 |     if(L->tail->prev == NULL || L->tail->prev!=aux){
      |         ^~
test.c:345:34: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  345 |     if(L->tail->prev == NULL || L->tail->prev!=aux){
      |                                  ^~
test.c: In function ‘test_popcurrent’:
test.c:410:17: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  410 |     L->current=L->tail;
      |                 ^~
test.c:411:10: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  411 |     aux=L->tail->prev;
      |          ^~
test.c:415:10: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  415 |     aux=L->tail->prev;
      |          ^~
test.c:421:9: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  421 |     if(L->tail != aux){
      |         ^~
test.c:426:9: error: ‘List’ {aka ‘struct List’} has no member named ‘tail’
  426 |     if(L->tail->next != NULL){
      |         ^~
fd722d1
Fri Mar 27 06:48:20 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
f9c3313
Fri Mar 27 06:53:06 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:5: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   50 |     lista->current = lista->head;
      |     ^~~~~
      |     list
list.c:50:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
e683a83
